[package]
name = "playback"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
description = "playback http request"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
chrono = "0.4.11"
